--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Etch-a-sketch</title>
 </head>
 <body>
+    <div class="container">
+        
+    </div>
+
     <script src="script.js"></script>
 </body>
 </html>
