--- a/index.html
+++ b/index.html
@@ -7,10 +7,9 @@
     <title>Etch-a-sketch</title>
 </head>
 <body>
-    <div class="container">
+    <div id="container">
         
     </div>
-
     <script src="script.js"></script>
 </body>
 </html>
