Add restart button

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Etch-a-sketch</title>
 </head>
 <body>
+    <div class="restart-button">
+        <button type="button" onclick="restartSite()">Restart</button>
+    </div>
     <div id="container">
         
     </div>
